; ModuleID = '/home/carl/AnghaBench/skynet/skynet-src/extr_socket_server.c_check_wb_list.c'
source_filename = "/home/carl/AnghaBench/skynet/skynet-src/extr_socket_server.c_check_wb_list.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wb_list = type { i32*, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.wb_list*)* @check_wb_list to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @check_wb_list(%struct.wb_list* %0) #0 {
  %2 = alloca %struct.wb_list*, align 8
  store %struct.wb_list* %0, %struct.wb_list** %2, align 8
  %3 = load %struct.wb_list*, %struct.wb_list** %2, align 8
  %4 = getelementptr inbounds %struct.wb_list, %struct.wb_list* %3, i32 0, i32 1
  %5 = load i32*, i32** %4, align 8
  %6 = icmp eq i32* %5, null
  %7 = zext i1 %6 to i32
  %8 = call i32 @assert(i32 %7)
  %9 = load %struct.wb_list*, %struct.wb_list** %2, align 8
  %10 = getelementptr inbounds %struct.wb_list, %struct.wb_list* %9, i32 0, i32 0
  %11 = load i32*, i32** %10, align 8
  %12 = icmp eq i32* %11, null
  %13 = zext i1 %12 to i32
  %14 = call i32 @assert(i32 %13)
  ret void
}

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
